<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LoginActivity">

    <EditText
        android:id="@+id/et_pin"
        android:layout_width="130dp"
        android:layout_height="40dp"

        android:background="@drawable/edit_text_border"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:hint="@string/user_enter_pin"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/et_user_name"
        app:layout_constraintStart_toStartOf="@+id/et_user_name"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"

        android:background="@drawable/edit_text_border"
        android:layout_marginTop="52dp"
        android:hint="@string/user_enter_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_login_prijava"
        android:background="@drawable/button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginTop="56dp"
        android:enabled="true"
        android:text="@string/action_prijava"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pin" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_graduation_cap"
        android:tint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/info_login"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>